feat(footer): apply desing

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -11,5 +11,7 @@
   "claim": "Claim your",
   "freeNft": "FREE NFT!",
   "informingEducation": "INFORMATING AND EDUCATION",
-  "committedFuture": "Asoblockchain from Costa Rica is committed to the future"
+  "committedFuture": "Asoblockchain from Costa Rica is committed to the future",
+  "interestingData": "INTERESTING DATA",
+  "subscribeNewsletter": "Subscribe to the newsletter"
 }
