--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -3,6 +3,7 @@
   "contact": "Contact",
   "copyright": "© All rights reserved. Created by Edenia Labs.",
   "support": "Support",
+  "homeHeaderSubtitleOne": "Cras ultrices leo vitae non viverra. Fringilla nisi quisque consequat, dignissim vitae proin ipsum sed. Pellentesque nec turpis purus eget pellentesque integer ipsum elementum felis.",
   "ourMission": "Our Mission",
   "members": "Members",
   "news": "News",
@@ -16,5 +17,5 @@
   "subscribeNewsletter": "Subscribe to the newsletter",
   "submit": "Submit",
   "goUp": "Go up",
-  "pastEvents": "Past Events",
+  "pastEvents": "Past Events"
 }
