--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -2,7 +2,6 @@
   "home": "Home",
   "contact": "Contact",
   "copyright": "© All rights reserved. Created by Edenia Labs.",
-  "support": "Support",
   "homeHeaderSubtitleOne": "Cras ultrices leo vitae non viverra. Fringilla nisi quisque consequat, dignissim vitae proin ipsum sed. Pellentesque nec turpis purus eget pellentesque integer ipsum elementum felis.",
   "ourMission": "Our Mission",
   "members": "Members",
@@ -15,7 +14,8 @@
   "committedFuture": "Asoblockchain from Costa Rica is committed to the future",
   "interestingData": "INTERESTING DATA",
   "subscribeNewsletter": "Subscribe to the newsletter",
-  "submit": "Submit",
+  "subscribe": "Subscribe",
   "goUp": "Go up",
-  "pastEvents": "Past Events"
+  "pastEvents": "PAST EVENTS",
+  "socialMedia": "FOLLOW US ON SOCIAL NETWORKS"
 }
