content(home: add content

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -2,7 +2,7 @@
   "home": "Home",
   "contact": "Contact",
   "copyright": "© All rights reserved. Created by Edenia Labs.",
-  "homeHeaderSubtitleOne": "Cras ultrices leo vitae non viverra. Fringilla nisi quisque consequat, dignissim vitae proin ipsum sed. Pellentesque nec turpis purus eget pellentesque integer ipsum elementum felis.",
+  "homeHeaderSubtitleOne": "We seek to unite the blockchain ecosystem of Costa Rica to promote trust, transparency, security, and innovation of distributed technologies in the country.",
   "ourMission": "Our Mission",
   "members": "Members",
   "news": "News",
@@ -10,12 +10,22 @@
   "joinAssociation": "Join the Association",
   "claim": "Claim your",
   "freeNft": "FREE NFT!",
-  "informingEducation": "INFORMATING AND EDUCATION",
+  "ourReasonBeing": "OUR REASON FOR BEING",
   "committedFuture": "Asoblockchain from Costa Rica is committed to the future",
+  "ourReasonBeingDes": "Asoblockchain of Costa Rica is committed to innovation and development of distributed technologies for the benefit of Costa Rican society. We seek to create relationships between different sectors to co-create a more transparent, inspiring and secure digital future.",
   "interestingData": "INTERESTING DATA",
   "subscribeNewsletter": "Subscribe to the newsletter",
   "subscribe": "Subscribe",
   "goUp": "Go up",
   "pastEvents": "PAST EVENTS",
-  "socialMedia": "FOLLOW US ON SOCIAL NETWORKS"
+  "socialMedia": "FOLLOW US ON SOCIAL NETWORKS",
+  "representation": "Representation",
+  "representationDes": "Asoblockchain is in charge of representing our members and interests, as well as prioritizing a regulatory agenda for the protection of users.",
+  "participation": "Participation",
+  "participationDes": "We take an active role in national and international discussions, as well as in coordinating with technology organizations, entrepreneurs and users.",
+  "promotion": "Promotion",
+  "promotionDes": "We amplify our message, share our enthusiasm for blockchain technologies, and educate on their features and benefits.",
+  "memberCompanies": "Member Companies",
+  "individuals": "Individuals",
+  "students": "Students"
 }
