--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -2,7 +2,7 @@
   "home": "Inicio",
   "contact": "Contacto",
   "copyright": "© Todos los derechos reservados. Creado por Edenia Labs.",
-  "homeHeaderSubtitleOne": "Cras ultrices leo vitae non viverra. Fringilla nisi quisque consequat, dignissim vitae proin ipsum sed. Pellentesque nec turpis purus eget pellentesque integer ipsum elementum felis.",
+  "homeHeaderSubtitleOne": "Buscamos unir al ecosistema blockchain de Costa Rica para promover la confianza, transparencia, seguridad, e innovación de las tecnologías distribuidas en el país.",
   "ourMission": "Nuestra misión",
   "members": "Miembros",
   "news": "Noticias",
@@ -10,12 +10,22 @@
   "joinAssociation": "Unirse a la Asociación",
   "claim": "Reclama tu",
   "freeNft": "NFT GRATIS!",
-  "informingEducation": "INFORMANDO Y EDUCANDO",
+  "ourReasonBeing": "NUESTRA RAZÓN DE SER",
   "committedFuture": "Asoblockchain de Costa Rica se compromete con el futuro",
+  "ourReasonBeingDes": "Asoblockchain de Costa Rica se compromete con la innovación y el desarrollo de las tecnologías distribuidas para beneficio de la sociedad costarricense. Buscamos crear relaciones entre distintos sectores para co-crear un futuro digital más transparente, inspirador y seguro.",
   "interestingData": "DATOS INTERESANTES",
   "subscribeNewsletter": "Suscríbete al boletín",
   "subscribe": "Suscribirse",
   "goUp": "Subir al Inicio",
   "pastEvents": "EVENTOS PASADOS",
-  "socialMedia": "SIGUANOS EN REDES SOCIALES"
+  "socialMedia": "SIGUANOS EN REDES SOCIALES",
+  "representation": "Representación",
+  "representationDes": "Asoblockchain se encarga de representar a nuestros miembros e intereses, así como priorizar una agenda regulatoria para la protección de los usuarios.",
+  "participation": "Participación",
+  "participationDes": "Tomamos un papel activo en discusiones nacionales e internacionales, así como en coordinar con organizaciones tecnológicas, empresarios y usuarios.",
+  "promotion": "Promoción",
+  "promotionDes": "Amplificamos nuestro mensaje, compartimos nuestro entusiasmo por las tecnologías blockchain y educamos sobre las funcionalidades y beneficios de estas.",
+  "memberCompanies": "Empresas Miembros",
+  "individuals": "Individuos",
+  "students": "Estudiantes"
 }
