feat(home): create members secction

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -34,5 +34,6 @@
   "startups": "Startups:",
   "startupsDesc": "Technology startups and other sectors with an interest in blockchain technology.",
   "individualsTitle": "Individuals: ",
-  "individualsDesc": "Individuals who have a special interest in blockchain technology or who work in the sector."
+  "individualsDesc": "Individuals who have a special interest in blockchain technology or who work in the sector.",
+  "footerText": "Asoblockchain of Costa Rica is a non-profit organization and without any political affiliation. If you have questions about our representation, you can contact us."
 }
