--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -34,5 +34,6 @@
   "startups": "Startups:",
   "startupsDesc": "Startups de tecnología y otros sectores con interés en la tecnología blockchain.",
   "individualsTitle": "Individuos: ",
-  "individualsDesc": "Personas individuales que tienen un interés especial en la tecnología blockchain o que trabajan en el sector."
+  "individualsDesc": "Personas individuales que tienen un interés especial en la tecnología blockchain o que trabajan en el sector.",
+  "footerText": "Asoblockchain de Costa Rica es una organización sin fines de lucro y sin ninguna afiliación política. Si tiene consultas sobre nuestra representación, puede comunicarse con nosotros."
 }
