feat(home): add content

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -11,7 +11,9 @@
   "claim": "Claim your",
   "freeNft": "FREE NFT!",
   "ourReasonBeing": "OUR REASON FOR BEING",
+  "joinTheAssociation": "JOIN THE ASSOCIATION",
   "committedFuture": "Asoblockchain from Costa Rica is committed to the future",
+  "associationMembers": "Association Members",
   "ourReasonBeingDes": "Asoblockchain of Costa Rica is committed to innovation and development of distributed technologies for the benefit of Costa Rican society. We seek to create relationships between different sectors to co-create a more transparent, inspiring and secure digital future.",
   "interestingData": "INTERESTING DATA",
   "subscribeNewsletter": "Subscribe to the newsletter",
@@ -30,10 +32,18 @@
   "students": "Students",
   "joinAssociationDesc": "Our members demonstrate great commitment to building, investing in, and defending blockchain technology. Asoblockchain welcomes people or organizations that want to help us develop the blockchain ecosystem in Costa Rica. We have different types of membership.",
   "organizationsCompanies": "Organizations and companies:",
-  "organizationsCompaniesDesc": "Representatives of large companies, non-profit organizations or government entities.",
-  "startups": "Startups:",
-  "startupsDesc": "Technology startups and other sectors with an interest in blockchain technology.",
-  "individualsTitle": "Individuals: ",
-  "individualsDesc": "Individuals who have a special interest in blockchain technology or who work in the sector.",
-  "footerText": "Asoblockchain of Costa Rica is a non-profit organization and without any political affiliation. If you have questions about our representation, you can contact us."
+  "rightVoiceVote": "With the Right to Voice and Vote",
+  "noRightVote": "No Right to Vote",
+  "individualAssociates": "Asociados individuales:",
+  "affiliates": "Affiliates: ",
+  "footerText": "Asoblockchain of Costa Rica is a non-profit organization and without any political affiliation. If you have questions about our representation, you can contact us.",
+  "accessOrganizationEvents": "Access to organization events.",
+  "accessInformationAboutBlockchain": "Access to information about blockchain opportunities and advice in Costa Rica.",
+  "networkingBetweenBusinessmen": "Networking between businessmen.",
+  "websiteAnnouncementsIndustry": "Announcements on the website and support in relations between sectors.",
+  "discountsActivitiesOrganized": "Discounts on activities organized by the association.",
+  "accessAsoblockchainChat": "Access to Asoblockchain chat.",
+  "accessOrganizationEventsDiscount": "Access to events of the organization with a discount.",
+  "individualAccessAsoblockchainChat": "Individual access to Asoblockchain chat.",
+  "accessEventsOrganizationSpecial": "Access to events of the organization with a special price."
 }
