--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -11,14 +11,16 @@
   "claim": "Reclama tu",
   "freeNft": "NFT GRATIS!",
   "ourReasonBeing": "NUESTRA RAZÓN DE SER",
+  "joinTheAssociation": "ÚNASE A LA ASOCIACIÓN",
   "committedFuture": "Asoblockchain de Costa Rica se compromete con el futuro",
+  "associationMembers": "Miembros de la Asociación",
   "ourReasonBeingDes": "Asoblockchain de Costa Rica se compromete con la innovación y el desarrollo de las tecnologías distribuidas para beneficio de la sociedad costarricense. Buscamos crear relaciones entre distintos sectores para co-crear un futuro digital más transparente, inspirador y seguro.",
   "interestingData": "DATOS INTERESANTES",
   "subscribeNewsletter": "Suscríbete al boletín",
   "subscribe": "Suscribirse",
   "goUp": "Subir al Inicio",
   "pastEvents": "EVENTOS PASADOS",
-  "socialMedia": "SIGUANOS EN REDES SOCIALES",
+  "socialMedia": "SÍGANOS EN REDES SOCIALES",
   "representation": "Representación",
   "representationDes": "Asoblockchain se encarga de representar a nuestros miembros e intereses, así como priorizar una agenda regulatoria para la protección de los usuarios.",
   "participation": "Participación",
@@ -30,10 +32,18 @@
   "students": "Estudiantes",
   "joinAssociationDesc": "Nuestros miembros demuestran gran compromiso en construir, invertir y defender la tecnología de blockchain. Asoblockchain da la bienvenida a personas u organizaciones que quieran ayudarnos a desarrollar el ecosistema blockchain en Costa Rica. Tenemos distintas modalidades de membresía.",
   "organizationsCompanies": "Organizaciones y empresas:",
-  "organizationsCompaniesDesc": "Representantes de empresas de gran tamaño, organizaciones sin fines de lucro o entidades gubernamentales.",
-  "startups": "Startups:",
-  "startupsDesc": "Startups de tecnología y otros sectores con interés en la tecnología blockchain.",
-  "individualsTitle": "Individuos: ",
-  "individualsDesc": "Personas individuales que tienen un interés especial en la tecnología blockchain o que trabajan en el sector.",
-  "footerText": "Asoblockchain de Costa Rica es una organización sin fines de lucro y sin ninguna afiliación política. Si tiene consultas sobre nuestra representación, puede comunicarse con nosotros."
+  "rightVoiceVote": "Con Derecho a Vos y Voto",
+  "noRightVote": "Sin Derecho a Voto",
+  "individualAssociates": "Asociados individuales:",
+  "affiliates": "Afiliados:",
+  "footerText": "Asoblockchain de Costa Rica es una organización sin fines de lucro y sin ninguna afiliación política. Si tiene consultas sobre nuestra representación, puede comunicarse con nosotros.",
+  "accessOrganizationEvents": "Acceso a eventos de la organización.",
+  "accessInformationAboutBlockchain": "Acceso a información sobre oportunidades y asesoría de blockchain en Costa Rica.",
+  "networkingBetweenBusinessmen": "Networking entre empresarios.",
+  "websiteAnnouncementsIndustry": "Anuncios en el sitio web y apoyo en relaciones entre sectores.",
+  "discountsActivitiesOrganized": "Descuentos en actividades organizadas por la asociación.",
+  "accessAsoblockchainChat": "Acceso al chat de Asoblockchain.",
+  "accessOrganizationEventsDiscount": "Acceso a eventos de la organización con descuento.",
+  "individualAccessAsoblockchainChat": "Acceso individual al chat de Asoblockchain.",
+  "accessEventsOrganizationSpecial": "Acceso a eventos de la organización con precio especial."
 }
