--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,6 +1,8 @@
 {
   "home": "Home",
   "contact": "Contact",
+  "homeMetaTitle": "Blockchain Association of Costa Rica",
+  "homeMetaDescription": "Asoblockchain of Costa Rica is committed to innovation and development of distributed technologies for the benefit of Costa Rican society.",
   "copyright": "© All rights reserved. Created by Edenia Labs.",
   "homeHeaderSubtitleOne": "We seek to unite the blockchain ecosystem of Costa Rica to promote trust, transparency, security, and innovation of distributed technologies in the country.",
   "ourMission": "Our Mission",
@@ -56,5 +58,6 @@
   "titleThreeNew": "AsoBlockchain and the future of Blockchain in Costa Rica",
   "november2021": "November 11, 2021",
   "febrero2021": " 7 February, 2021",
-  "enero2019": "8 January 2019"
+  "enero2019": "8 January 2019",
+  "newsletter": "Asoblockchain respects your privacy. Your information will be kept confidential and you can unsubscribe from these communications at any time."
 }
