feat(contact-section): create contact form

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -59,5 +59,7 @@
   "november2021": "November 11, 2021",
   "febrero2021": " 7 February, 2021",
   "enero2019": "8 January 2019",
-  "newsletter": "Asoblockchain respects your privacy. Your information will be kept confidential and you can unsubscribe from these communications at any time."
+  "newsletter": "Asoblockchain respects your privacy. Your information will be kept confidential and you can unsubscribe from these communications at any time.",
+  "contactUsNow": "CONTACT US NOW",
+  "sentSuccessfully": "Thank you for contacting Edenia. We will reply to you as soon as possible"
 }
