--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -59,5 +59,7 @@
   "november2021": "Noviembre 11, 2021",
   "febrero2021": " 7 febrero, 2021",
   "enero2019": "8 enero, 2019",
-  "newsletter": "Asoblockchain respeta su privacidad. Su información se mantendrá confidencial y puede darse de baja de estas comunicaciones en cualquier momento"
+  "newsletter": "Asoblockchain respeta su privacidad. Su información se mantendrá confidencial y puede darse de baja de estas comunicaciones en cualquier momento",
+  "contactUsNow": "CONTACTENOS AHORA",
+  "sentSuccessfully": "Gracias por contactar a Edenia. Le responderemos lo antes posible"
 }
