fix(build): delete null component

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -76,5 +76,31 @@
   "associatedFirstPoint": "- Access to events of the organization is provided at a discount price, you and vote in decision-making.",
   "associatedSecondPoint": "- Access to information about opportunities in the BLOCKCHAIN area in Costa Rica. Advice to take advantage of opportunities in the BLOCKCHAIN area.",
   "affiliate": "Affiliate:",
-  "affiliateFirstPoint": "- Access to events of the organization is provided at a discount price, with you (but without a vote in decision-making)"
+  "affiliateFirstPoint": "- Access to events of the organization is provided at a discount price, with you (but without a vote in decision-making)",
+  "selectMembershipCategory": "Select your membership category",
+  "associateVoiceVotingRights": "Associate with Voice and Voting Rights - Annual Cost: $150",
+  "affiliateAnnualCost": "Affiliate - Annual Cost: $50",
+  "professionOccupation": "Profession or Occupation",
+  "reasonJoin": "Reason to join",
+  "reasonJoinDes": "Please provide us with more details about your interest in the Association and the Blockchain / Crypto industry. If you are in industry please provide details and website (for membership clearance). If you are only interested in the industry, please indicate it.",
+  "legalEntityRegistration": "Legal Entity Registration",
+  "registryCompaniesOrganizations": "This registry is for companies or organizations.",
+  "profits": "Profits:",
+  "accessEventsOrganizationVoiceVote": "Access to events of the organization, voice and vote in decision-making is provided.",
+  "accessInformationAboutOpportunitiesBLOCKCHAIN": "Access to information about opportunities in the BLOCKCHAIN area in Costa Rica. Advice to take advantage of opportunities in the BLOCKCHAIN area.",
+  "specialCostASOBLOCKCHAINWebsite": "Ads with special cost on the ASOBLOCKCHAIN ​​website. Support and advice on intersectoral relations, mainly with the public sector.",
+  "discountActivitiesOrganizedASOBLOCKCHAIN": "15% discount on activities organized by ASOBLOCKCHAIN ​​and a 7.5% discount for first-degree relatives.",
+  "accessPeopleCompanyAsoblockchainChat": "Access for 5 people from the company to the Asoblockchain CR chat on whats app.",
+  "selectCompanyCategory": "Select your Company category. The company membership is Associate with Right to Voice and Vote.",
+  "companyEmployeesPerYear": "Company with 1 to 15 employees - US$400.00 per year",
+  "company16to30EmployeesPerYear": "Company with 16 to 30 employees - US$600.00 per year",
+  "company31+EmployeesPerYear": "Company of 31+ employees - US$1,200.00 per year",
+  "contactPerson": "Contact person",
+  "titlePosition": "Position",
+  "back": "Back",
+  "next": "Next",
+  "ASOBLOCKCHAINAffiliationForm": "ASOBLOCKCHAIN Affiliation Form",
+  "appreciateInterestBeingPartInitiative": "We appreciate your interest in being part of this initiative, please complete the requested information.",
+  "requiredField": "Required field",
+  "invalidEmail": "Invalid email"
 }
