--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -76,5 +76,31 @@
   "associatedFirstPoint": "- Se brinda acceso a eventos de la organización a precio de descuento, vos y voto en la toma de decisiones.",
   "associatedSecondPoint": " -Acceso a información sobre oportunidades en el área de BLOCKCHAIN en Costa Rica. Asesoría para aprovechar oportunidades en el área BLOCKCHAIN.",
   "affiliate": "Afiliado:",
-  "affiliateFirstPoint": "- Se brinda acceso a eventos de la organización a precio de descuento, con vos (pero sin voto en la toma de decisiones)"
+  "affiliateFirstPoint": "- Se brinda acceso a eventos de la organización a precio de descuento, con vos (pero sin voto en la toma de decisiones)",
+  "selectMembershipCategory": "Seleccione su categoría de afiliación",
+  "associateVoiceVotingRights": "Asociado con Derecho de Voz y Voto - Costo Anual: $150",
+  "affiliateAnnualCost": "Afiliado - Costo Anual: $50",
+  "professionOccupation": "Profesión u Ocupación",
+  "reasonJoin": "Motivo para Asociarse",
+  "reasonJoinDes": "Por favor bríndenos mas detalles sobre su interés en la Asociación y la industria Blockchain / Crypto. Si se dedica a la industria por favor brinde detalles y sitio web (para autorización de membresía). Si solo tiene interés sobre la industria por favor indíquelo.",
+  "legalEntityRegistration": "Registro Persona Jurídica",
+  "registryCompaniesOrganizations": "Este registro es para empresas u organizaciones.",
+  "profits": "Beneficios:",
+  "accessEventsOrganizationVoiceVote": "Se brinda acceso a eventos de la organización, voz y voto en la toma de decisiones.",
+  "accessInformationAboutOpportunitiesBLOCKCHAIN": "Acceso a información sobre oportunidades en el área de BLOCKCHAIN en Costa Rica.Asesoría para aprovechar oportunidades en el área BLOCKCHAIN.",
+  "specialCostASOBLOCKCHAINWebsite": "Ads with special cost on the ASOBLOCKCHAIN ​​website. Support and advice on intersectoral relations, mainly with the public sector.",
+  "discountActivitiesOrganizedASOBLOCKCHAIN": "Descuento de un 15% en actividades organizadas por ASOBLOCKCHAIN y un 7.5% de descuento para familiares de primer grado de consanguinidad.",
+  "accessPeopleCompanyAsoblockchainChat": "Acceso para 5 personas de la empresa al chat de Asoblockchain CR en whats app.",
+  "selectCompanyCategory": "Seleccione su categoría de Empresa. La membresía de empresa es de Asociado con Derecho a Voz y Voto.",
+  "companyEmployeesPerYear": "Empresa de 1 a 15 empleados - US$400.00 anual",
+  "company16to30EmployeesPerYear": "Company with 16 to 30 employees - US$600.00 per year",
+  "company31+EmployeesPerYear": "Company of 31+ employees - US$1,200.00 per year",
+  "contactPerson": "Persona de contacto",
+  "titlePosition": "Cargo / Puesto",
+  "back": "Atrás",
+  "next": "Siguiente",
+  "ASOBLOCKCHAINAffiliationForm": "Formulario de afiliación ASOBLOCKCHAIN",
+  "appreciateInterestBeingPartInitiative": "Agradecemos su interés por ser parte de esta iniciativa, favor completar la información que se solicita.",
+  "requiredField": "Campos requeridos",
+  "invalidEmail": "Email incorrecto"
 }
