--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -61,7 +61,7 @@
   "enero2019": "8 January 2019",
   "newsletter": "Asoblockchain respects your privacy. Your information will be kept confidential and you can unsubscribe from these communications at any time.",
   "contactUsNow": "CONTACT US NOW",
-  "sentSuccessfully": "Thank you for contacting Edenia. We will reply to you as soon as possible",
+  "sentSuccessfully": "Thank you for contacting Asoblockchain. We will reply to you as soon as possible",
   "name": "Name",
   "telephone": "Telephone",
   "email": "Email",
