fix(i18n): change content

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -2,7 +2,7 @@
   "home": "Home",
   "contact": "Contact",
   "homeMetaTitle": "Blockchain Association of Costa Rica",
-  "homeMetaDescription": "Asoblockchain of Costa Rica is committed to innovation and development of distributed technologies for the benefit of Costa Rican society.",
+  "homeMetaDescription": "Asoblockchain Costa Rica is committed to innovation and development of distributed technologies for the benefit of Costa Rican society.",
   "copyright": "© All rights reserved. Created by Edenia Labs.",
   "homeHeaderSubtitleOne": "We seek to unite the blockchain ecosystem of Costa Rica to promote trust, transparency, security, and innovation of distributed technologies in the country.",
   "ourMission": "Our Mission",
@@ -15,9 +15,9 @@
   "freeNft": "FREE NFT!",
   "ourReasonBeing": "OUR REASON FOR BEING",
   "joinTheAssociation": "JOIN THE ASSOCIATION",
-  "committedFuture": "Asoblockchain from Costa Rica is committed to the future",
+  "committedFuture": "Asoblockchain Costa Rica is committed to the future",
   "associationMembers": "Association Members",
-  "ourReasonBeingDes": "Asoblockchain of Costa Rica is committed to innovation and development of distributed technologies for the benefit of Costa Rican society. We seek to create relationships between different sectors to co-create a more transparent, inspiring and secure digital future.",
+  "ourReasonBeingDes": "Asoblockchain Costa Rica is committed to innovation and development of distributed technologies for the benefit of Costa Rican society. We seek to create relationships between different sectors to co-create a more transparent, inspiring and secure digital future.",
   "interestingData": "INTERESTING DATA",
   "subscribeNewsletter": "Subscribe to the newsletter",
   "subscribe": "Subscribe",
@@ -39,7 +39,7 @@
   "noRightVote": "No Right to Vote",
   "individualAssociates": "Asociados individuales:",
   "affiliates": "Affiliates: ",
-  "footerText": "Asoblockchain of Costa Rica is a non-profit organization and without any political affiliation. If you have questions about our representation, you can contact us.",
+  "footerText": "Asoblockchain Costa Rica is a non-profit organization and without any political affiliation. If you have questions about our representation, you can contact us.",
   "accessOrganizationEvents": "Access to organization events.",
   "accessInformationAboutBlockchain": "Access to information about blockchain opportunities and advice in Costa Rica.",
   "networkingBetweenBusinessmen": "Networking between businessmen.",
